; ModuleID = '/home/carl/AnghaBench/redis/src/extr_anet.c_anetTcpAccept.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_anet.c_anetTcpAccept.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockaddr_storage = type { i64 }
%struct.sockaddr_in = type { i32, i32 }
%struct.sockaddr_in6 = type { i32, i32 }
%struct.sockaddr = type { i32 }

@ANET_ERR = common dso_local global i32 0, align 4
@AF_INET = common dso_local global i64 0, align 8
@AF_INET6 = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @anetTcpAccept(i8* %0, i32 %1, i8* %2, i64 %3, i32* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca %struct.sockaddr_storage, align 8
  %14 = alloca i32, align 4
  %15 = alloca %struct.sockaddr_in*, align 8
  %16 = alloca %struct.sockaddr_in6*, align 8
  store i8* %0, i8** %7, align 8
  store i32 %1, i32* %8, align 4
  store i8* %2, i8** %9, align 8
  store i64 %3, i64* %10, align 8
  store i32* %4, i32** %11, align 8
  store i32 8, i32* %14, align 4
  %17 = load i8*, i8** %7, align 8
  %18 = load i32, i32* %8, align 4
  %19 = bitcast %struct.sockaddr_storage* %13 to %struct.sockaddr*
  %20 = call i32 @anetGenericAccept(i8* %17, i32 %18, %struct.sockaddr* %19, i32* %14)
  store i32 %20, i32* %12, align 4
  %21 = icmp eq i32 %20, -1
  br i1 %21, label %22, label %24

22:                                               ; preds = %5
  %23 = load i32, i32* @ANET_ERR, align 4
  store i32 %23, i32* %6, align 4
  br label %75

24:                                               ; preds = %5
  %25 = getelementptr inbounds %struct.sockaddr_storage, %struct.sockaddr_storage* %13, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = load i64, i64* @AF_INET, align 8
  %28 = icmp eq i64 %26, %27
  br i1 %28, label %29, label %51

29:                                               ; preds = %24
  %30 = bitcast %struct.sockaddr_storage* %13 to %struct.sockaddr_in*
  store %struct.sockaddr_in* %30, %struct.sockaddr_in** %15, align 8
  %31 = load i8*, i8** %9, align 8
  %32 = icmp ne i8* %31, null
  br i1 %32, label %33, label %41

33:                                               ; preds = %29
  %34 = load i64, i64* @AF_INET, align 8
  %35 = load %struct.sockaddr_in*, %struct.sockaddr_in** %15, align 8
  %36 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %35, i32 0, i32 1
  %37 = bitcast i32* %36 to i8*
  %38 = load i8*, i8** %9, align 8
  %39 = load i64, i64* %10, align 8
  %40 = call i32 @inet_ntop(i64 %34, i8* %37, i8* %38, i64 %39)
  br label %41

41:                                               ; preds = %33, %29
  %42 = load i32*, i32** %11, align 8
  %43 = icmp ne i32* %42, null
  br i1 %43, label %44, label %50

44:                                               ; preds = %41
  %45 = load %struct.sockaddr_in*, %struct.sockaddr_in** %15, align 8
  %46 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %45, i32 0, i32 0
  %47 = load i32, i32* %46, align 4
  %48 = call i32 @ntohs(i32 %47)
  %49 = load i32*, i32** %11, align 8
  store i32 %48, i32* %49, align 4
  br label %50

50:                                               ; preds = %44, %41
  br label %73

51:                                               ; preds = %24
  %52 = bitcast %struct.sockaddr_storage* %13 to %struct.sockaddr_in6*
  store %struct.sockaddr_in6* %52, %struct.sockaddr_in6** %16, align 8
  %53 = load i8*, i8** %9, align 8
  %54 = icmp ne i8* %53, null
  br i1 %54, label %55, label %63

55:                                               ; preds = %51
  %56 = load i64, i64* @AF_INET6, align 8
  %57 = load %struct.sockaddr_in6*, %struct.sockaddr_in6** %16, align 8
  %58 = getelementptr inbounds %struct.sockaddr_in6, %struct.sockaddr_in6* %57, i32 0, i32 1
  %59 = bitcast i32* %58 to i8*
  %60 = load i8*, i8** %9, align 8
  %61 = load i64, i64* %10, align 8
  %62 = call i32 @inet_ntop(i64 %56, i8* %59, i8* %60, i64 %61)
  br label %63

63:                                               ; preds = %55, %51
  %64 = load i32*, i32** %11, align 8
  %65 = icmp ne i32* %64, null
  br i1 %65, label %66, label %72

66:                                               ; preds = %63
  %67 = load %struct.sockaddr_in6*, %struct.sockaddr_in6** %16, align 8
  %68 = getelementptr inbounds %struct.sockaddr_in6, %struct.sockaddr_in6* %67, i32 0, i32 0
  %69 = load i32, i32* %68, align 4
  %70 = call i32 @ntohs(i32 %69)
  %71 = load i32*, i32** %11, align 8
  store i32 %70, i32* %71, align 4
  br label %72

72:                                               ; preds = %66, %63
  br label %73

73:                                               ; preds = %72, %50
  %74 = load i32, i32* %12, align 4
  store i32 %74, i32* %6, align 4
  br label %75

75:                                               ; preds = %73, %22
  %76 = load i32, i32* %6, align 4
  ret i32 %76
}

declare dso_local i32 @anetGenericAccept(i8*, i32, %struct.sockaddr*, i32*) #1

declare dso_local i32 @inet_ntop(i64, i8*, i8*, i64) #1

declare dso_local i32 @ntohs(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
